Scraping/ALL/19128.txt
To : Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
Subject : Mass filing on Python 3.7 async module import?
From : "Paul R. Tagliamonte" <paultag@gmail.com>
Date : Sat, 7 Jul 2018 18:17:20 -0400
Message-id : CAO6P2QRGp=-LXDZEJhGHa+ObiNV485YzFAvJ+Xwh9VNCAC8B-g@mail.gmail.com


Hey DPMT (BCC'ing -devel, let's keep conversaion on DPMT),
I see that Python 3.7 now raises a syntax error when you try to import
a module that is named `async`.
```
$ python3.6
Python 3.6.6 (default, Jun 27 2018, 14:44:17)
[GCC 8.1.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> import foo.async
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'foo'
>>>
```
With Python 3.7:
```
$ python3.7
Python 3.7.0 (default, Jun 27 2018, 14:40:03)
[GCC 8.1.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> import foo.async
  File "<stdin>", line 1
    import foo.async
                   ^
SyntaxError: invalid syntax
>>>
```
Quickly checking codesearch, there are a bunch of packages that have
import lines that look like they'd fail.
Anyone mind if I do a MBF on libraries that are providing anything
named `async.py`?
   Paul